# spaghetti

./: #Test-sgt.toml#  .#Test-sgt.toml  .gitignore  Cargo.toml  Client.toml  Embedded.toml  Generator.toml  README.md  Server.toml  Settings.toml  Sgt.toml  Test-2pl.toml  Test-hit.toml  Test-opt-hit.toml  Test-sgt.toml  Test-smallbank.toml  Test-tatp.toml  Test-tpl.toml  access_info.csv  attendez-analysis.R  build.rs  durner_2pl.csv  durner_results.csv  exp-contention.sh  exp-isolation.sh  exp-scalability.sh  exp-tatp.sh  msgt_plots.R  plot.sh  result.txt  results-2pl-tatp  results-hit-tatp  results-sgt-tatp  results.csv  results_1.csv  run.sh  smallbank_schema.txt  stats.txt  tatp_schema.txt
.github/workflows/: build.yml  build_test.yml  coverage.yml  main.yml  rust.yml  test.yml
benches/: bsgt_bench.rs  core_bench.rs  my_benchmark.rs
experiments/: README.md  exp-contention.sh  exp-cycle.sh  exp-isolation.sh  exp-mc-whp.sh  exp-overhead.sh  exp-scalability.sh  exp-smallbank.sh  exp-tatp.sh  exp-tpl.sh  exp-update-rate.sh  exp-whp.sh
include/: shared_spin_mutex.h
phd-workshop/: phd_workshop_plots.R
resources/: metrics.md  smallbank.md  tatp.md
schema/: acid_schema.txt  smallbank_schema.txt  tatp_schema.txt
scripts/: README.md  build.txt  generate-report.sh  get_name.R  msgt_plots.R  plots.R  report.R  report.Rmd
src/: #client.rs#  #server.rs#  #workloads.rs#  .#client.rs  .#workloads.rs  client.rs  common.rs  config.ini  connection.rs  cpp.rs  datagen.rs  driver_config.ini  driver_main.rs  embedded.rs  frame.rs  gpc.rs  handler.rs  lib.rs  listener.rs  manager.rs  message.rs  parameter_generation.rs  pool.rs  queue.rs  scheduler.rs  server.rs  settings.rs  shared_spin_mutex.cc  shutdown.rs  storage.rs  tatp.rs  tpcc.rs  tpcc_short_schema.txt  transaction.rs  workloads.rs
src/client/: #consumer.rs#  #handlers.rs#  .#consumer.rs  .#handlers.rs  consumer.rs  handlers.rs  producer.rs  read_handler.rs  write_handler.rs
src/common/: #utils.rs#  .#statistics.rs  .#utils.rs  connection.rs  coordinator.rs  ds.rs  error.rs  frame.rs  global_state.rs  isolation_level.rs  message.rs  parameter_generation.rs  shutdown.rs  statistics.rs  stats_bucket.rs  stored_procedure_result.rs  transaction.rs  transaction_information.rs  utils.rs  value_id.rs  wait_manager.rs
src/common/ds/: atomic_extent_vector.rs  atomic_linked_list.rs  locked_linked_list.rs  spin_mutex.rs
src/datagen/: acid.rs  smallbank.rs  tatp.rs
src/embedded/: generator.rs  logging.rs  manager.rs  pool.rs
src/gpc/: coordinator.rs  generator.rs  helper.rs  threads.rs
src/scheduler/: #sgt.rs#  .#sgt.rs  attendez.rs  basic_sgt.rs  common.rs  error.rs  hit_list.rs  mcwhp.rs  msgt.rs  msgtall.rs  msgtearly.rs  msgtrel.rs  msgtstd.rs  mtpl.rs  nocc.rs  nocc2.rs  opt_hit_list.rs  owh.rs  owh2.rs  owhtt.rs  serialization_graph_testing.rs  sgt.rs  tpl.rs  two_phase_locking.rs  wait.rs  wh.rs  whp.rs
src/server/: .#write_handler.rs  handler.rs  listener.rs  manager.rs  pool.rs  queue.rs  read_handler.rs  scheduler.rs  statistics.rs  write_handler.rs
src/storage/: #tuple.rs#  .#tuple.rs  access.rs  catalog.rs  datatype.rs  flattable.rs  index.rs  row.rs  table.rs  tuple.rs  utils.rs  version.rs
src/system/: transaction.rs  workload.rs
src/tpcc/: helper.rs  new_order.rs
src/workloads/: acid.rs  dummy.rs  smallbank.rs  tatp.rs  tpcc.rs  ycsb.rs
tests/: Acid.toml  Test-acid.toml  Test-basic-sgt.toml  Test-hit.toml  Test-opt-hit.toml  Test-sgt.toml  Test-smallbank.toml  acid.rs  acid_2pl.rs  acid_basic_sgt.rs  acid_hit.rs  acid_opt_hit.rs  acid_sgt.rs  basic_sgt.rs  common.rs  hit.rs  integration_test.rs  opt_hit.rs  sgt.rs  tpl.rs
tests/common/: #mod.rs#  .#mod.rs  mod.rs
thesis/: thesis_plots.R
tpctc/: tpctc_plots.R
utils/: README.md  server.sh
vldb/: vldb_plots.R
(+114 files in other folders)
