[package]
name = "spaghetti"
version = "0.1.0"
authors = ["Jack Waudby <j.waudby2@newcastle.ac.uk>"]
edition = "2018"
readme = "README.md"
description = """
A concurrency control evaluation framework.
"""

[[bin]]
name = "spag-client"
path = "src/bin/client.rs"

[[bin]]
name = "spag-server"
path = "src/bin/server.rs"

[[bin]]
name = "spag-gen"
path = "src/bin/datagen.rs"

[[bin]]
name = "spag-em"
path = "src/bin/embedded.rs"

[dependencies]
chashmap = "2.2.2"
rand = "0.8.0"
config = "0.10"
bytes = "1"
serde = {version = "1.0.118", features = ["derive"]}
bincode = "1.3.1"
tokio = { version = "1", features = ["full"] }
tracing = {version = "0.1.5", default-features = false}
tracing-futures = "0.2.4"
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt"]}
tracing-appender = "0.1"
clap = "3.0.0-beta.2"
crossbeam-queue = "0.3"
tokio-test = "0.4.0"
chrono = "0.4"
lazy_static = "1.4.0"
core_affinity = "0.5.10"
csv = "1.1.6"
serde_json = {version = "1.0.64", features = ["preserve_order"]}
strum = "0.20"
strum_macros = "0.20"
statrs = "0.13.0"
log = "0.4.14"
env_logger = "*"
test-env-log = "0.2.7"