[package]
name = "spaghetti"
version = "0.1.0"
authors = ["Jack Waudby <j.waudby2@newcastle.ac.uk>"]
edition = "2018"
readme = "README.md"
description = """
A concurrency control evaluation framework.
"""

[profile.release]
debug = true

[[bin]]
name = "spag-gpc"
path = "src/bin/gpc.rs"

[[bench]]
name = "bsgt_bench"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
chashmap = "2.2.2"
rand = "0.8.0"
config = "0.10"
serde = {version = "1.0.118", features = ["derive"]}
tracing = {version = "0.1.5", default-features = false}
tracing-subscriber = {version = "0.2.17", default-features = false, features = ["env-filter", "fmt"]}
tracing-appender = "0.1"
clap = "3.0.0-beta.2"
tokio-test = "0.4.0"
chrono = "0.4"
lazy_static = "1.4.0"
core_affinity = "0.5.10"
csv = "1.1.6"
serde_json = {version = "1.0.64", features = ["preserve_order"]}
strum = "0.20"
strum_macros = "0.20"
statrs = "0.13.0"
log = "0.4.14"
env_logger = "*"
test-env-log ={version = "0.2.7", features = ["log","trace"]}
petgraph = "0.5.1"
libmath = "0.2.1"
parking_lot = "0.11"
nohash-hasher = "0.2.0"
spin = {version = "0.9.0", features = ["ticket_mutex"]}
thread_local = "1.1.3"
crossbeam-utils = "0.8.4"
