[package]
name = "spaghetti"
version = "0.1.0"
authors = ["Jack Waudby <j.waudby2@newcastle.ac.uk>"]
edition = "2018"
readme = "README.md"
description = """
A concurrency control evaluation framework.
"""

[profile.release]
debug = true
# lto = true

[[bin]]
name = "spag"
path = "src/bin/main.rs"

[dev-dependencies]
criterion = {version="0.3", features= ["html_reports"]}
petgraph = "0.5.1"
test-env-log ={version = "0.2.7", features = ["trace"]}
env_logger = "*"

[dependencies]
rand = "0.8.0"
config = "0.10"
serde = {version = "1.0.118", features = ["derive"]}
tracing = "0.1.5"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
clap = { version = "3.2.6", features = ["derive"] }
lazy_static = "1.4.0"
core_affinity = "0.5.10"
csv = "1.1.6"
serde_json = {version = "1.0.64", features = ["preserve_order"]}
strum = "0.20"
strum_macros = "0.20"
libmath = "0.2.1"
parking_lot = "0.11"
nohash-hasher = "0.2.0"
rustc-hash = "1.1.0"
spin = {version = "0.9.0", features = ["ticket_mutex"]}
thread_local = "1.1.3"
crossbeam-utils = "0.8.4"
crossbeam-epoch = "0.9.4"
flurry = "0.3.1"
jemallocator = "0.3.0"
pbr = "1.0.4"
arrayvec = "0.7.1"
bit-vec = "0.6.3"
log = "0.4.14"
once_cell = "1.8.0"
cxx = "1.0"
linked_hash_set = "0.1.4"
scc = "0.8.3"
coarsetime = "0.1.22"
dashmap = "5.3.4"
thread-id = "4.0.0"

[build-dependencies]
cxx-build = "1.0"